<resources>
    <string name="app_name">Attendance Manager</string>
    <string name="welcome">Welcome To</string>
    <string name="DB_NAME">attendance_manager</string>
    <string name="USERS">users</string>
    <string name="FACULTY_LOGIN">FACULTY LOGIN</string>
    <string name="STUDENT_LOGIN">STUDENT LOGIN</string>
    <string name="ADD_USER">Add User</string>
    <string name="FULL_NAME">Full Name</string>
    <string name="EMAIL">Email</string>
    <string name="USERNAME">Username</string>
    <string name="ASTERISK">******</string>
    <string name="FACULTY">FACULTY</string>
    <string name="SAVE">Save</string>
    <string name="STUDENT">Student</string>
    <string name="UID">UID</string>
    <string name="USER_TYPE">User Type</string>
    <string name="All_USERS">All Users</string>
    <string name="LOGIN">Login</string>
    <string name="LOGIN_HERE">Login Here</string>
    <string name="DASHBOARD">Dashboard</string>
    <string name="VIEW_USERS">View Users</string>
    <string name="MANAGE_USER">Manage User</string>
    <string name="ADD_STUDENT">Add Student</string>
    <string name="VIEW_STUDENTS">View Students</string>
    <string name="MANAGE_ATTENDANCE">Manage Attendance</string>
    <string name="MENU">Menu Button</string>
    <string name="DELETE_BUTTON">Delete Button</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="LOGOUT">Logout</string>
    <string name="VIEW_FACULTY">View Faculty</string>
    <string name="ADD_FACULTY">Add Faculty</string>
    <string name="FIRSTNAME">First Name</string>
    <string name="LASTNAME">Last Name</string>
    <string name="MOBILE_NO">Mobile No.</string>
    <string name="ADDRESS">Address</string>
    <string name="SELECT_DEPT">Select Department</string>
    <string name="SELECT_YEAR">Select Year</string>
    <string name="SELECT_BRANCH">Select Branch</string>
    <string name="SELECT_SEM">Select Semester</string>
    <string name="NEXT">Next</string>
    <string name="SEARCH_STUDENT">Search Student</string>
    <string name="SELECT_SUBJECT">Select Subject</string>
    <string name="ADD_ATTENDANCE">Add Attendance</string>
    <string name="CALENDAR_BUTTON">Calender Button</string>
    <string name="VIEW_TOTAL_ATTENDANCE">View Total Attendance</string>
    <string name="VIEW_ATTENDANCE">View Attendance</string>
    <string name="ABSENT">A</string>
    <string name="PRESENT">P</string>
    <string name="ATTENDANCE">Attendance</string>
    <string name="ROLL_NO">Roll No.</string>
    <string name="ATTENDANCE_LIST">Attendance List</string>
    <string name="STUDENT_LIST">Student List</string>
    <string name="FACULTY_LIST">Faculty List</string>
    <string name="ATTENDANCE_REPORT">Attendance Report</string>
    <string name="STUDENT_DETAILS">Student Details</string>
    <string name="FACULTY_DETAILS">Faculty Details</string>
</resources>