<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AddStudentActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/ADD_STUDENT"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:id="@+id/form_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/save_student_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2">

        <EditText
            android:id="@+id/ed_stu_roll_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="@string/ROLL_NO"
            android:ems="10"
            android:hint="@string/ROLL_NO"
            android:inputType="number" />

        <EditText
            android:id="@+id/ed_stu_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="@string/FIRSTNAME"
            android:ems="10"
            android:hint="@string/FIRSTNAME"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/ed_stu_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="@string/LASTNAME"
            android:ems="10"
            android:hint="@string/LASTNAME"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/ed_stu_mob_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="@string/MOBILE_NO"
            android:ems="10"
            android:hint="@string/MOBILE_NO"
            android:inputType="phone" />

        <EditText
            android:id="@+id/ed_stu_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="@string/ADDRESS"
            android:ems="10"
            android:hint="@string/ADDRESS"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/tv_branch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/SELECT_BRANCH"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_stu_branch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" />

        <TextView
            android:id="@+id/tv_sem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/SELECT_SEM"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_stu_sem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" />

    </LinearLayout>

    <Button
        android:id="@+id/save_student_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/SAVE"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>