<?xml version="1.0" encoding="utf-8"?>

<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radioGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <RadioButton
        android:id="@+id/PresentradioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/PRESENT" />

    <RadioButton
        android:id="@+id/AbsentradioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/ABSENT" />

    <Button
        android:id="@+id/attendanceSubmitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SAVE"
        android:textColor="@color/white" />

</RadioGroup>