<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AddAttendanceSessionActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/ATTENDANCE"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <LinearLayout
        android:id="@+id/form_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2">

        <TextView
            android:id="@+id/tv_branch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/SELECT_BRANCH"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_stu_branch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" />

        <TextView
            android:id="@+id/tv_sem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/SELECT_SEM"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_stu_sem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/SELECT_SUBJECT"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/DateEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:autofillHints="Date"
                android:ems="10"
                android:hint="@null"
                android:inputType="date" />

            <ImageButton
                android:id="@+id/DateImageButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@null"
                android:contentDescription="@string/CALENDAR_BUTTON"
                android:cropToPadding="true"
                android:scaleType="fitCenter"
                android:src="@drawable/attendance" />
        </LinearLayout>

        <Button
            android:id="@+id/add_attendance_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/ADD_ATTENDANCE"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/view_total_attendance_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/VIEW_TOTAL_ATTENDANCE"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/view_attendance_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/VIEW_ATTENDANCE"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/faculty_logout_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:text="@string/LOGOUT"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>