<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AdminDashboardActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/DASHBOARD"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp"
        app:contentPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/add_student_btn"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/ADD_STUDENT"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/view_students_btn"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/VIEW_STUDENTS"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/manage_attendance_btn"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/MANAGE_ATTENDANCE"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/add_faculty_btn"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/ADD_FACULTY"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/view_faculty_btn"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/VIEW_FACULTY"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/logout_btn"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/LOGOUT"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>